Added handling for no variables in formula
Also added tests for such examples